--- a/index.html
+++ b/index.html
@@ -371,67 +371,7 @@
                     </div>
                 </div>
                 <div class="cbody shodow-none content-padding">
-                    <div class="body-container  set"> 
-                        <div class="r-card">
-                            <div class="top-image">
-                                <img src="./assets/images/jLwVAUtLOAQ.jpg" alt="" srcset="">
-                            </div>
-                            <div class="r-card-body">
-                                <div class="r-card-title">
-                                    <h5 class="leon">Which is good time to start ?</h5>
-                                </div>
-                                <div class="r-infomation">
-                                    <p>
-                                        When we start to start to talk about the time to start.
-                                        There is not right time to start but now...
-                                    </p>
-                                </div>
-                                <div class="r-card-footer">
-                                    <button class="read-more" >Read more</button>
-                                </div>
-                            </div>
-                        </div>   
-                        <div class="r-card">
-                            <div class="top-image">
-                                <img src="./assets/images/GnvurwJsKaY.jpg" alt="" srcset="">
-                            </div>
-                            <div class="r-card-body">
-                                <div class="r-card-title">
-                                    <h5 class="leon">Which is good time to start ?</h5>
-                                </div>
-                                <div class="r-infomation">
-                                    <p>
-                                        When we start to start to talk about the time to start. 
-                                        There is not right time to start but now... 
-                                    </p>
-                                </div>
-                                <div class="r-card-footer">
-                                    <button class="read-more" >Read more</button>
-                                </div>
-                            </div>
-                        </div>  
-                        <div class="r-card">
-                            <div class="top-image">
-                                <img src="./assets/images/rH8O0FHFpfw.jpg" alt="" srcset="">
-                            </div>
-                            <div class="r-card-body">
-                                <div class="r-card-title ">
-                                    <h5 class="leon" >Which is good time to start ?</h5>
-                                </div>
-                                <div class="r-infomation">
-                                    <p>
-                                        When we start to start to talk about the time to start.
-                                        There is not right time to start but now...
-                                    </p>
-                                </div>
-                                <div class="r-card-footer">
-                                    <button class="read-more" >Read more</button>
-                                </div>
-                            </div>
-                        </div> 
-                        <div class="more" >
-                            <button class="browse-more"  onclick="location.href='./ui/browse.html'">Browse more blog</button>
-                        </div>
+                    <div class="body-container  set" id="blogDisplay"> 
                     </div>                      
                 </div>
             </div>
@@ -581,6 +521,7 @@
        
       </div>
     <!-- ======= End:: content wrapper ====================================-->
+    <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> 
     <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
