--- a/ui/browse.html
+++ b/ui/browse.html
@@ -62,7 +62,7 @@
                     </ul>
                 </div>
                 <div class="user-profile hidden" id="profile-image">
-                    <img src="../images/L8tWZT4CcVQ.jpg" id="profile"  onclick="location.href='./profile.html'" alt="sezerano">
+                    <img src="../assets/images/L8tWZT4CcVQ.jpg" id="profile"  onclick="location.href='./profile.html'" alt="sezerano">
                 </div>
                 <div class="reveal" id="bugger">
                     <div class="line1"></div>
@@ -85,7 +85,7 @@
                 <div class="set"> 
                     <div class="r-card post-card" id="postCard" >
                         <div class="user-profile " id="profile-image">
-                            <img src="../images/L8tWZT4CcVQ.jpg" id="profile-p" alt="sezerano">
+                            <img src="../assets/images/L8tWZT4CcVQ.jpg" id="profile-p" alt="sezerano">
                         </div>  
                         <div class="comment-field">
                             <p> Hello <span id="username">..</span>! Hope you had a great day </p>
