--- a/ui/blogupdate.html
+++ b/ui/blogupdate.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/browse.css">
     <link rel="stylesheet" href="../css/header-responsiveness.css">
@@ -62,7 +63,7 @@
                         </ul>
                     </div>
                     <div class="user-profile hidden" id="profile-image">
-                        <img src="../images/L8tWZT4CcVQ.jpg" id="profile"  onclick="location.href='./profile.html'" alt="sezerano">
+                        <img src="../assets/images/L8tWZT4CcVQ.jpg" id="profile"  onclick="location.href='./profile.html'" alt="sezerano">
                     </div>
                     <div class="reveal" id="bugger">
                         <div class="line1"></div>
@@ -104,7 +105,7 @@
                                         </div>
                                         <label for="subtitle">Banner</label>
                                         <div class="input-field">
-                                           <input type="file" name="" id="image" placeholder="Banner" accept="image/*" >
+                                           <input type="file" name="" id="image" placeholder="Banner" accept="../assets/image/*" >
                                         </div>
                                         <label for="information">Description</label>
                                         <div class="blogDesc">
@@ -145,7 +146,7 @@
                                 </span>
                                 <span>
                                     <p>
-                                    sezerano jean chrysostome
+                                        sezerano jean chrysostome
                                     </p>
                                 </span>
                             </div>
