--- a/ui/signup.html
+++ b/ui/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/browse.css">
     <link rel="stylesheet" href="../css/header-responsiveness.css">
@@ -284,9 +285,9 @@
             </div>                
         </footer>
         <!-- ================ End:: content Footer ========= -->
-    <!-- ===================== End:: content Footer ========= -->
     <!-- ====================== End:: contents =========================== -->
     </div>        
+    
     <script src="../js/provider.js"></script>   
     <script src="../js/validate-signup.js"></script>  
     <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -297,7 +298,5 @@
     <script defer src="../js/script.js"></script>
     <script defer src="../server/userSignUpAuth.js"></script>
 
-    
-    <!-- ================================== End:: content wrapper ================================== -->
 </body>
 </html>
