--- a/ui/blog.html
+++ b/ui/blog.html
@@ -601,10 +601,10 @@
                         <h3 class="highligh-f">Subscribe</h3>
                         <div class="follow underline"></div>
                     </div>
-                    <form action="#" method="post">
+                    <form action="#" method="post" id="subscribe" >
                         <div class="form-fields">
                             <div class="input-field sub">
-                                <input type="email" placeholder="Email" name="" id="email">
+                                <input type="email" placeholder="Email" name="" id="subemail">
                                 <button>
                                     <svg width="23" height="20" viewBox="0 0 23 20" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
