--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                         <h3 class="highligh-f">Subscribe</h3>
                         <div class="follow underline"></div>
                     </div>
-                    <form action="#" method="post">
+                    <form action="#" method="post" id="subscribe">
                         <div class="form-fields">
                             <div class="input-field sub">
                                 <input type="email" placeholder="Email" name="" id="subemail">
