delivering comment feature

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -64,7 +64,7 @@
                     </ul>
                 </div>
                 <div class="user-profile hidden" id="profile-image">
-                    <img src="../images/L8tWZT4CcVQ.jpg" id="profile"  onclick="location.href='./profile.html'" alt="sezerano">
+                    <img src="../assets/images/profile.png" id="profile"  onclick="location.href='./profile.html'" alt="sezerano">
                 </div>
                 <div class="reveal" id="bugger">
                     <div class="line1"></div>
@@ -86,7 +86,7 @@
                 <div class="set"> 
                     <div class="r-card post-card" id="postCard" >
                         <div class="user-profile " id="profile-image">
-                            <img src="../images/L8tWZT4CcVQ.jpg" id="profile-p" alt="sezerano">
+                            <img src="../assets/images/profile.png" id="profile-p" alt="sezerano">
                         </div>  
                         <div class="comment-field">
                             <p> You are logged as <span id="username">..</span>! You can click <a href="./login.html">here</a> to logout</p>
@@ -112,7 +112,7 @@
             <div class="cbody shodow-none content-padding">
                 <div class="set"> 
                     <div class="r-card image-fill" >
-                        <img src="../images/L8tWZT4CcVQ.jpg" id="imageToUpload" alt="sezerano">
+                        <img src="../assets/images/profile.png" id="imageToUpload" alt="sezerano">
                     </div> 
                     <div class="r-card add-new-image">
                         <div class="rcard-container">
@@ -275,8 +275,8 @@
     <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script defer src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <script defer src="../js/script.js"></script>
-    <script defer src="../js/provider.js"></script>   
+    <script defer src="../js/provider.js"></script>
+    <script defer src="../js/script.js"></script>   
     <script defer src="../connection/connection.js"></script>
     <script defer src="../server/profile.js"></script>
 </body>
