--- a/ui/blog.html
+++ b/ui/blog.html
@@ -63,7 +63,7 @@
                     </ul>
                 </div>
                 <div class="user-profile hidden" id="profile-image">
-                    <img src="../images/L8tWZT4CcVQ.jpg" id="profile" onclick="location.href='./profile.html'"
+                    <img src="../assets/images/L8tWZT4CcVQ.jpg" id="profile" onclick="location.href='./profile.html'"
                         alt="sezerano">
                 </div>
                 <div class="reveal" id="bugger">
