Updating user profile

--- a/ui/profile.html
+++ b/ui/profile.html
@@ -89,7 +89,7 @@
                             <img src="../assets/images/profile.png" id="profile-p" alt="sezerano">
                         </div>  
                         <div class="comment-field">
-                            <p> You are logged as <span id="username">..</span>! You can click <a href="./login.html">here</a> to logout</p>
+                            <p> You are logged as <span id="username">..</span>! You can click <span onclick="logout()" class="leon" >here</span> to logout</p>
                         </div>          
                     </div>
                 </div>                      
